[project]
name = "abira-docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "furo>=2025.12.19",
    "linkify-it-py>=2.0.3",
    "myst-parser>=5.0.0",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
]
